# camera-calibration-studio

./: CMakeLists.txt  README.md
camera_V4L2/: AddCameraWidget.cpp  AddCameraWidget.h  AddCameraWidget.ui  CMakeLists.txt  CameraPlugin.cpp  CameraPlugin.h  LiveCapture.cpp  LiveCapture.h  LiveCaptureParameters.cpp  LiveCaptureParameters.h  camera_V4L2.json
camera_gazebo/: AddCameraWidget.cpp  AddCameraWidget.h  AddCameraWidget.ui  CMakeLists.txt  CameraPlugin.cpp  CameraPlugin.h  GazeboConnection.cpp  GazeboConnection.h  LiveCapture.cpp  LiveCapture.h  camera_gazebo.json
common/: AddCameraWidget.cpp  AddCameraWidget.h  CMakeLists.txt  CalibrationParameters.cpp  CalibrationParameters.h  Camera.cpp  Camera.h  CameraPlugin.cpp  CameraPlugin.h  LiveCapture.cpp  LiveCapture.h  Pattern.cpp  Pattern.h  Project.cpp  Project.h  Sensor.cpp  Sensor.h  Shot.cpp  Shot.h  SqliteDatabase.cpp  SqliteDatabase.h
main/: AddCameraDialog.cpp  AddCameraDialog.h  AddCameraDialog.ui  AddPatternDialog.cpp  AddPatternDialog.h  AddPatternDialog.ui  CMakeLists.txt  CalibrationAlgorithmConfigurationDialog.cpp  CalibrationAlgorithmConfigurationDialog.h  CalibrationAlgorithmConfigurationDialog.ui  CalibrationDataDockWidget.cpp  CalibrationDataDockWidget.h  CalibrationDataDockWidget.ui  CaptureParameterWidget.cpp  CaptureParameterWidget.h  CaptureParameterWidget.ui  CaptureParametersDockWidget.cpp  CaptureParametersDockWidget.h  CaptureParametersDockWidget.ui  CentralWidget.cpp  CentralWidget.h  CentralWidget.ui  CornerRefiner.cpp  CornerRefiner.h  CornerRefinerConfigurationWidget.cpp  CornerRefinerConfigurationWidget.h  CornerRefinerConfigurationWidget.ui  ImageImporter.cpp  ImageImporter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PatternDetector.cpp  PatternDetector.h  PatternDetectorConfigurationDialog.cpp  PatternDetectorConfigurationDialog.h  PatternDetectorConfigurationDialog.ui  PrintPatternDialog.cpp  PrintPatternDialog.h  ProjectTreeDockWidget.cpp  (+8 more)
